Changelog of lizard-krw
===================================================


0.6 (unreleased)
----------------

- Fixed saving alpha scores. TODO: refactor goal score/alpha score/color.


0.5 (2010-12-16)
----------------

- Restarted migration steps from 0001.


0.4 (2010-12-16)
----------------

- Manually changed migrations. Not sure yet if it works correctly.


0.3 (2010-12-16)
----------------

- New measure model and accompanying models + migrations.

- Adjusted measure screen.


0.2 (2010-12-16)
----------------

- Krw adapter can now show alternative maps.

- Area_search now matches ident instead of name.

- Fixed reverse urls.

- Added WaterBody.ident.

- Added initial South migration.


0.1 (2010-12-07)
----------------

- Copy the following items from krw-waternet:

   - models
   - views
   - urls
   - templates
   - layers
   - admin
   - js/css

- Initial library skeleton created by nensskel.  [Jack]