@@ -22,10 +22,10 @@ SCORE_CATEGORY_FAUNA = 3
 SCORE_CATEGORY_VIS = 4
 
 SCORE_CATEGORIES = {
-    SCORE_CATEGORY_FYTO: u'fyto',
-    SCORE_CATEGORY_FLORA: u'flora',
-    SCORE_CATEGORY_FAUNA: u'fauna',
-    SCORE_CATEGORY_VIS: u'vis'}
+    SCORE_CATEGORY_FYTO: u'Fytoplankton',
+    SCORE_CATEGORY_FLORA: u'Overige waterflora',
+    SCORE_CATEGORY_FAUNA: u'Macrofauna',
+    SCORE_CATEGORY_VIS: u'Vis'}
 
 SCORE_CATEGORY_CHOICES = SCORE_CATEGORIES.items()
 
